Refactor budget service: restructured service logic with DTOs and mappers