@@ -1,69 +1,52 @@
 package com.budgetSystem.budget.Service;
 
-import java.time.LocalDate;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-import com.sama.exceptions.RecordNotFoundExecption;
-import org.springframework.stereotype.Service;
- 
-
 import com.budgetSystem.budget.Model.Budget;
 import com.budgetSystem.budget.Repository.BudgetRepository;
-
+import com.budgetSystem.budget.Repository.CategoryRepository;
+import com.budgetSystem.budget.dto.budget.BudgetResponse;
+import com.budgetSystem.budget.dto.budget.CreateBudgetRequest;
+import com.budgetSystem.budget.dto.budget.UpdateBudgetRequest;
+import com.budgetSystem.budget.mapper.BudgetMapper;
+import com.sama.exceptions.RecordNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+import com.budgetSystem.budget.Model.Category;
 
 @Service
 @RequiredArgsConstructor
 public class BudgetService {
 
     private final BudgetRepository budgetRepository;
+    private final CategoryRepository categoryRepository;
 
-    public void addBudget(Budget budget) {
-         budgetRepository.save(budget);
+    public BudgetResponse addBudget(CreateBudgetRequest dto) {
+        Budget budget = BudgetMapper.convertToEntity(dto);
+        Category category = categoryRepository.findById(dto.getCategoryId()).orElseThrow(() -> new RecordNotFoundException("Category not found"));
+        budget.setCategory(category);
+        budgetRepository.save(budget);
+        return BudgetMapper.convertToResponse(budget);
     }
 
-    public List<Budget> findByClientID(int clientID)
-    {
-        List<Budget> budgets = budgetRepository.findByClientID(clientID);
-        if (budgets.size() == 0) throw new RecordNotFoundExecption("No budgets yet by the client");
-        return budgets;
+    public BudgetResponse updateBudget(UpdateBudgetRequest dto) {
+        Budget budget = budgetRepository.findById(dto.getBudgetId()).orElseThrow(() -> new RecordNotFoundException("budget not found"));
+        BudgetMapper.updateBudget(dto,budget);
+        return BudgetMapper.convertToResponse(budget);
+    }
+    public BudgetResponse getBudgetById(Integer budgetId) {
+        Budget budget = budgetRepository.findById(budgetId).orElseThrow(() -> new RecordNotFoundException("budget not found"));
+        return BudgetMapper.convertToResponse(budget);
     }
 
-    public List<Budget> findByMonthAndClientID(int month, int clientID)
-    {
-        if(month >= 1 && month <= 12)
-        {
-            List<Budget> allBudgets = budgetRepository.findByClientID(clientID);
-            if(allBudgets.size()==0)throw new RecordNotFoundExecption("Client has no budgets yet");
-            List<Budget> filteredBudgets =  allBudgets.stream()
-                    .filter(budget -> getMonthFromBudgetPeriod(budget.getBudgetPeriod()) == month)
-                    .collect(Collectors.toList());
-            if(filteredBudgets.size()>=1)return filteredBudgets;
-            throw new RecordNotFoundExecption("No Budget exist in that month");
-        }
-        throw new RecordNotFoundExecption("Month must be between 1 and 12");
+    public List<BudgetResponse> getBudgetsByCategoryID(Integer categoryId) {
+        List<Budget> budgets = budgetRepository.findAllByCategoryId(categoryId);
+        if (budgets.isEmpty()) throw new RecordNotFoundException("No budgets made yet by the client");
+        return budgets.stream().map(BudgetMapper::convertToResponse).toList();
     }
 
-    private int getMonthFromBudgetPeriod(LocalDate budgetPeriod) {
-        return budgetPeriod.getMonthValue();
+    public void deleteBudget(Integer budgetId) {
+        Budget budget = budgetRepository.findById(budgetId) .orElseThrow( () -> new RecordNotFoundException("budget not found"));
+        budgetRepository.delete(budget);
     }
-
-    public List<Budget> deleteBudgetForClient(Integer clientId,Integer budgetId) {
-        Optional<Budget> budget = budgetRepository.findById(budgetId);
-        if(budget.isPresent())
-        {
-            if(budget.get().getClientID().equals(clientId))
-            {
-                budgetRepository.deleteById(budgetId);
-                List<Budget> budgets = budgetRepository.findByClientID(clientId);
-                return budgets;
-            }
-            throw new RecordNotFoundExecption("client has no such budget id");
-        }
-        throw new RecordNotFoundExecption("budget not exist");
-    }
-
-     
 
 }
